// Vitest Snapshot v1

exports[`themer wox theme generator > should provide installation instructions 1`] = `
"
1. Copy 'Themer Dark.xaml' and 'Themer Light.xaml' into Wox's theme directory (for example, \`C:\\\\Users\\\\<username>\\\\AppData\\\\Local\\\\Wox\\\\app-<version>\\\\Themes\`).
2. Open Wox and type \\"settings\\" to launch Wox settings.
3. On the \\"Themes\\" tab, select the generated theme from the list.
"
`;

exports[`themer wox theme generator > should render properly 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<ResourceDictionary xmlns=\\"http://schemas.microsoft.com/winfx/2006/xaml/presentation\\" xmlns:x=\\"http://schemas.microsoft.com/winfx/2006/xaml\\">
  <ResourceDictionary.MergedDictionaries>
    <ResourceDictionary Source=\\"Base.xaml\\" />
  </ResourceDictionary.MergedDictionaries>
  <Style x:Key=\\"QueryBoxStyle\\" BasedOn=\\"{StaticResource BaseQueryBoxStyle}\\" TargetType=\\"{x:Type TextBox}\\">
    <Setter Property=\\"Background\\" Value=\\"#474247\\" />
    <Setter Property=\\"Foreground\\" Value=\\"#FFFCFF\\" />
  </Style>
  <Style x:Key=\\"WindowBorderStyle\\" BasedOn=\\"{StaticResource BaseWindowBorderStyle}\\" TargetType=\\"{x:Type Border}\\">
    <Setter Property=\\"Background\\" Value=\\"#282629\\" />
  </Style>
  <Style x:Key=\\"WindowStyle\\" TargetType=\\"{x:Type Window}\\" BasedOn=\\"{StaticResource BaseWindowStyle}\\" />
  <Style x:Key=\\"PendingLineStyle\\" BasedOn=\\"{StaticResource BasePendingLineStyle}\\" TargetType=\\"{x:Type Line}\\" />
  <Style x:Key=\\"ItemTitleStyle\\" BasedOn=\\"{StaticResource BaseItemTitleStyle}\\" TargetType=\\"{x:Type TextBlock}\\">
    <Setter Property=\\"Foreground\\" Value=\\"#FFFCFF\\" />
  </Style>
  <Style x:Key=\\"ItemSubTitleStyle\\" BasedOn=\\"{StaticResource BaseItemSubTitleStyle}\\" TargetType=\\"{x:Type TextBlock}\\">
    <Setter Property=\\"Foreground\\" Value=\\"#A29DA3\\" />
  </Style>
  <Style x:Key=\\"ItemTitleSelectedStyle\\" BasedOn=\\"{StaticResource BaseItemTitleSelectedStyle}\\" TargetType=\\"{x:Type TextBlock}\\">
    <Setter Property=\\"Foreground\\" Value=\\"#282629\\" />
  </Style>
  <Style x:Key=\\"ItemSubTitleSelectedStyle\\" BasedOn=\\"{StaticResource BaseItemSubTitleSelectedStyle}\\" TargetType=\\"{x:Type TextBlock}\\">
    <Setter Property=\\"Foreground\\" Value=\\"#474247\\" />
  </Style>
  <SolidColorBrush x:Key=\\"ItemSelectedBackgroundColor\\">#26C99E</SolidColorBrush>
  <Style x:Key=\\"ThumbStyle\\" BasedOn=\\"{StaticResource BaseThumbStyle}\\" TargetType=\\"{x:Type Thumb}\\" />
  <Style x:Key=\\"ScrollBarStyle\\" BasedOn=\\"{StaticResource BaseScrollBarStyle}\\" TargetType=\\"{x:Type ScrollBar}\\" />
</ResourceDictionary>"
`;

exports[`themer wox theme generator > should render properly 2`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<ResourceDictionary xmlns=\\"http://schemas.microsoft.com/winfx/2006/xaml/presentation\\" xmlns:x=\\"http://schemas.microsoft.com/winfx/2006/xaml\\">
  <ResourceDictionary.MergedDictionaries>
    <ResourceDictionary Source=\\"Base.xaml\\" />
  </ResourceDictionary.MergedDictionaries>
  <Style x:Key=\\"QueryBoxStyle\\" BasedOn=\\"{StaticResource BaseQueryBoxStyle}\\" TargetType=\\"{x:Type TextBox}\\">
    <Setter Property=\\"Background\\" Value=\\"#E0DCE0\\" />
    <Setter Property=\\"Foreground\\" Value=\\"#282629\\" />
  </Style>
  <Style x:Key=\\"WindowBorderStyle\\" BasedOn=\\"{StaticResource BaseWindowBorderStyle}\\" TargetType=\\"{x:Type Border}\\">
    <Setter Property=\\"Background\\" Value=\\"#FFFCFF\\" />
  </Style>
  <Style x:Key=\\"WindowStyle\\" TargetType=\\"{x:Type Window}\\" BasedOn=\\"{StaticResource BaseWindowStyle}\\" />
  <Style x:Key=\\"PendingLineStyle\\" BasedOn=\\"{StaticResource BasePendingLineStyle}\\" TargetType=\\"{x:Type Line}\\" />
  <Style x:Key=\\"ItemTitleStyle\\" BasedOn=\\"{StaticResource BaseItemTitleStyle}\\" TargetType=\\"{x:Type TextBlock}\\">
    <Setter Property=\\"Foreground\\" Value=\\"#282629\\" />
  </Style>
  <Style x:Key=\\"ItemSubTitleStyle\\" BasedOn=\\"{StaticResource BaseItemSubTitleStyle}\\" TargetType=\\"{x:Type TextBlock}\\">
    <Setter Property=\\"Foreground\\" Value=\\"#847E85\\" />
  </Style>
  <Style x:Key=\\"ItemTitleSelectedStyle\\" BasedOn=\\"{StaticResource BaseItemTitleSelectedStyle}\\" TargetType=\\"{x:Type TextBlock}\\">
    <Setter Property=\\"Foreground\\" Value=\\"#FFFCFF\\" />
  </Style>
  <Style x:Key=\\"ItemSubTitleSelectedStyle\\" BasedOn=\\"{StaticResource BaseItemSubTitleSelectedStyle}\\" TargetType=\\"{x:Type TextBlock}\\">
    <Setter Property=\\"Foreground\\" Value=\\"#E0DCE0\\" />
  </Style>
  <SolidColorBrush x:Key=\\"ItemSelectedBackgroundColor\\">#1FC598</SolidColorBrush>
  <Style x:Key=\\"ThumbStyle\\" BasedOn=\\"{StaticResource BaseThumbStyle}\\" TargetType=\\"{x:Type Thumb}\\" />
  <Style x:Key=\\"ScrollBarStyle\\" BasedOn=\\"{StaticResource BaseScrollBarStyle}\\" TargetType=\\"{x:Type ScrollBar}\\" />
</ResourceDictionary>"
`;
